fix/bella/update-home-schema-and-services
